--- a/index.html
+++ b/index.html
@@ -19,5 +19,12 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script>
+      // Redirect to /init on first visit
+      if (window.location.pathname === '/' && !sessionStorage.getItem('visited')) {
+        sessionStorage.setItem('visited', 'true');
+        window.location.href = '/init';
+      }
+    </script>
   </body>
 </html>
